# Neural-Network-AI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Neural Network.cpp  Neural Network.h  README.md
